     (filled by validate_out())
   * out : now a vector of arguments to enable multi-arg occurrences
   * write*Accessibility : uses now outPrefix2streamName values
   * constructor :
     + initialization of outPrefix2streamName
     * argument help unified
   * parse() :
     + duplication check for --out arguments to avoid file write clashes
 * Interaction :
   + Seed : class to concentrate all seed-related information
   - seedRange : replaced by seed member
   + seed : optional Seed object
   * setSeedRange() : fills seed member
   + operator=(Interaction) : copy function that creates new seed object
   + copy constructor: to copy seed object
 * OutputHandler* :
   * adaption to Interaction::Seed change

170214 Martin Mann :
 + PredictionTrackerPairMinE : tracks for all intermolecular index pairs the
   minimal energy of any interaction covering this pair
 + PredictionTrackerHub : forwards tracking information to all registered
   trackers
 * CommandLineParsing : 
   * getPredictor() :
     + PredictionTrackerHub used for tracker setup

170212 Martin Mann :
 * general :
   + newOutputStream() : returns a pointer to a (newly allocated) output 
     stream depending on the provided string
   + deleteOutputStream() : deletes (if necessary) the pointer returned by
     newOutputStream
 * CommandLineParsing :
   * bugfix : -n argument description wrong [thanks to Michael Uhl]
   + out*minEFile + validator : stream name of minE profile output
   * destruction :
     + using deleteOutputStream()
   * parse() :
     + using newOutputStream()
     + checks for out*minEfile
   * getPredictor() :
     + PredictionTracker setup
   * writeAccessibility() :
     + using newOutputStream()
     + using deleteOutputStream()
 * InteractionEnergy :
   + getE( Z ) : ensemble energy from partition function
 + OutputHandlerHub : hub for a list of OutputHandler objects to that the output
   requests are forwarded